--- a/i18n/en.json
+++ b/i18n/en.json
@@ -1,3 +1,11 @@
 {
-  "title": "A STREAM JOURNEY UNDER THE CARPET"
+  "title": "A STREAM JOURNEY UNDER THE CARPET",
+  "common": {
+    "exercise": {
+      "fail": {
+        "abusive": "Abusive use of {{{method}}}",
+        "expected": "No usage of {{{method}}}"
+      }
+    }
+  }
 }
