Add 3rd exercise

--- a/i18n/fr.json
+++ b/i18n/fr.json
@@ -10,6 +10,7 @@
   },
   "exercise": {
     "HELLO STREAM": "BONJOUR, STREAM",
-    "TRANSFORM IT": "TRANSFORME MOI ÇA"
+    "TRANSFORM IT": "TRANSFORME MOI ÇA",
+    "DIVIDE AND CONQUER": "DIVISER POUR MIEUX RÉGNER"
   }
 }
